# serendipity

./: .gitignore  README.md  docker-compose.yml
auth_module/: Dockerfile  go.mod  go.sum
auth_module/cmd/: main.go
auth_module/internal/config/: configs.go
auth_module/internal/handlers/: auth.go  code.go  oauth.go
main_module/: CMakeLists.txt  docker-compose.yml  dockerfile  vcpkg.json
main_module/db/: init.sql
main_module/src/: main.cpp
main_module/src/db/: db.h  db_attempts.cpp  db_base.cpp  db_courses.cpp  db_notifications.cpp  db_questions.cpp  db_tests.cpp  db_user.cpp
main_module/src/domain/: course.h  question.h  test.h
main_module/src/handlers/: attempt_handler.h  base_handler.h  course_handler.h  notification_handler.h  question_handler.h  test_handler.h  user_handler.h
main_module/src/security/: acess.h  auth_guard.h  jwt.cpp  jwt.h  user_context.h
telegram_module/: AuthMockServer.cpp  BotLogicClient.cpp  BotLogicClient.h  BotLogicServer.cpp  CommandParser.cpp  CommandParser.h  MainMockServer.cpp  Makefile  Message.h  README.md  TelegramClient.cpp  TelegramClient.h  main.cpp  telegram_bot
web-client_module/: go.mod
web-client_module/templates/: login.html  result.html  tests.html
web_client_module/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum
web_client_module/nginx/: nginx.conf
web_client_module/templates/: action_result.html  actions.html  auth_code.html  error.html  index_anonymous.html  index_autorized.html  index_unknown.html  layout.html  login.html  result.html  tests.html
(+28 files in other folders)
